--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="carregando">Carregando</string>
     <string name="tentar_novamente">Tentar novamente</string>
     <string name="poster_label">Poster do filme</string>
-    <string name="grid_poster_url">http://image.tmdb.org/t/p/w500/</string>
+    <string name="connection_fail">Não a conectividade com a internet, verifique sua rede</string>
+    <string name="error_loading">Erro ao carregar os filmes, tente novamente</string>
+    <string name="error_loading_code">Erro ao carregar dados, code: </string>
+    <string name="grid_poster_inner_url" translatable="false">http://image.tmdb.org/t/p/w342</string>
+    <string name="grid_poster_url" translatable="false">http://image.tmdb.org/t/p/w500/</string>
+    <string name="movie_parceble_name" translatable="false">movie</string>
+    <string name="movie_list_parceble_name" translatable="false">movies</string>
+    <string name="max_rate" translatable="false">/10</string>
 </resources>
